--- a/conf/nps.conf
+++ b/conf/nps.conf
@@ -38,7 +38,7 @@ log_level=7
 #web
 web_host=
 web_username=admin
-web_password=admin
+web_password=Meiying
 web_port = 18080
 web_ip=0.0.0.0
 web_base_url=
